# killswitch

./: pyproject.toml
client/: .env.development  .env.production  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css  main.tsx  types.ts
client/src/components/: edit-feature.tsx  feature-card-detail-view.tsx  feature-card-list.tsx  feature-card.tsx
client/src/services/: api.ts
killswitch/: app.py
server/: pyproject.toml
server/killswitch/: app.py  dump.rdb  feature_flag.db  helpers.py
server/killswitch/templates/: index.html
