[tool.poetry]
name = "killswitch"
version = "0.1.0"
description = ""
authors = ["Matt Nicholson <matthewn1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
redis = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
